tests/main-test-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - 'podinfo.bigbang.dev'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - 'podinfo.bigbang.dev'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: wildcard-cert
      mode: SIMPLE
